--- a/gamekeeper-cli/package.json
+++ b/gamekeeper-cli/package.json
@@ -22,7 +22,7 @@
     "@oclif/plugin-plugins": "^2.1.1",
     "chalk": "4.1.2",
     "fuzzy": "^0.1.3",
-    "gamekeeper": "./gamekeeper-v1.0.22.tgz",
+    "gamekeeper-core": "./gamekeeper-core-v1.0.23.tgz",
     "inquirer": "^8.0.0",
     "inquirer-autocomplete-prompt": "^2.0.0"
   },
