--- a/gamekeeper-core/package.json
+++ b/gamekeeper-core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gamekeeper-core",
-  "version": "1.0.24",
+  "version": "1.0.25",
   "description": "core parts of game keeper",
   "main": "dist/index.js",
   "typings": "dist/index.d.ts",
@@ -8,7 +8,7 @@
   "license": "MIT",
   "scripts": {
     "build": "tsc && tsc-alias",
-    "test": "yarn build && node ./dist/test/index.js",
+    "test": "mocha ./test/**/*.test.js",
     "deploy": "yarn build && yarn version --patch && yarn pack",
     "db:reset": "cd data && ./create_db.sh",
     "migrate": "yarn build && node ./dist/tools/importer.js"
@@ -21,7 +21,9 @@
     "tsyringe": "^4.7.0"
   },
   "devDependencies": {
-    "@types/node": "^18.11.7",
+    "@types/mocha": "^10.0.0",
+    "@types/node": "^18.11.9",
+    "mocha": "^10.1.0",
     "tsc-alias": "^1.7.0",
     "typescript": "^4.8.4"
   }
