--- a/gamekeeper-cli/package.json
+++ b/gamekeeper-cli/package.json
@@ -21,8 +21,10 @@
     "@oclif/plugin-help": "^5",
     "@oclif/plugin-plugins": "^2.1.1",
     "chalk": "4.1.2",
+    "date-fns": "^2.29.3",
+    "dotenv": "^16.0.3",
     "fuzzy": "^0.1.3",
-    "gamekeeper-core": "./gamekeeper-core-v1.0.23.tgz",
+    "gamekeeper-core": "./gamekeeper-core-v1.0.36.tgz",
     "inquirer": "^8.0.0",
     "inquirer-autocomplete-prompt": "^2.0.0"
   },
