--- a/gamekeeper-core/package.json
+++ b/gamekeeper-core/package.json
@@ -1,18 +1,19 @@
 {
   "name": "gamekeeper-core",
-  "version": "1.0.53",
+  "version": "1.0.54",
   "description": "core parts of game keeper",
+  "type": "module",
   "main": "dist/index.js",
   "typings": "dist/index.d.ts",
   "author": "John Tamminga",
   "license": "MIT",
   "exports": {
     ".": {
-      "require": "./dist/index.js",
+      "import": "./dist/index.js",
       "types": "./dist/index.d.ts"
     },
     "./web": {
-      "require": "./dist/web.js",
+      "import": "./dist/web.js",
       "types": "./dist/web.d.ts"
     }
   },
