--- a/gamekeeper-web/package.json
+++ b/gamekeeper-web/package.json
@@ -12,8 +12,9 @@
     "@types/node": "18.11.8",
     "@types/react": "18.0.24",
     "@types/react-dom": "18.0.8",
+    "date-fns": "^2.29.3",
     "dotenv": "^16.0.3",
-    "gamekeeper-core": "./gamekeeper-core-v1.0.51.tgz",
+    "gamekeeper-core": "./gamekeeper-core-v1.0.55.tgz",
     "next": "13.0.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
