--- a/gamekeeper-web/package.json
+++ b/gamekeeper-web/package.json
@@ -14,8 +14,8 @@
     "@types/react-dom": "18.0.8",
     "date-fns": "^2.29.3",
     "dotenv": "^16.0.3",
-    "gamekeeper-core": "./gamekeeper-core-v1.0.55.tgz",
-    "next": "13.0.1",
+    "gamekeeper-core": "./gamekeeper-core-v1.0.70.tgz",
+    "next": "^13.4.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "typescript": "4.8.4"
