--- a/gamekeeper-core/package.json
+++ b/gamekeeper-core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gamekeeper-core",
-  "version": "1.0.72",
+  "version": "1.0.73",
   "description": "core parts of game keeper",
   "main": "dist/index.js",
   "typings": "dist/index.d.ts",
@@ -15,10 +15,8 @@
   },
   "dependencies": {
     "date-fns": "^2.29.3",
-    "reflect-metadata": "^0.1.13",
     "sqlite": "^4.1.2",
-    "sqlite3": "^5.1.2",
-    "tsyringe": "^4.7.0"
+    "sqlite3": "^5.1.2"
   },
   "devDependencies": {
     "@types/mocha": "^10.0.0",
