--- a/gamekeeper-web/package.json
+++ b/gamekeeper-web/package.json
@@ -14,10 +14,10 @@
     "@types/react-dom": "18.0.8",
     "date-fns": "^2.29.3",
     "dotenv": "^16.0.3",
-    "gamekeeper-core": "./gamekeeper-core-v1.0.72.tgz",
-    "next": "^13.4.4",
+    "gamekeeper-core": "./gamekeeper-core-v1.0.85.tgz",
+    "next": "^13.4.7",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "typescript": "4.8.4"
+    "typescript": "^5.1.6"
   }
 }
