--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -8,16 +8,10 @@
   "license": "MIT",
   "scripts": {
     "build": "tsc && tsc-alias",
-    "test": "mocha ./test/**/*.test.js",
-    "deploy:cli": "yarn build && yarn version --patch && yarn pack && bash ./scripts/upgrade-cli.sh",
-    "deploy:web": "yarn build && yarn version --patch && yarn pack && bash ./scripts/upgrade-web.sh",
-    "db:reset": "cd data && ./create_db.sh",
-    "migrate": "yarn build && node ./dist/tools/importer.js"
+    "test": "mocha ./test/**/*.test.js"
   },
   "dependencies": {
-    "date-fns": "^2.29.3",
-    "sqlite": "^4.1.2",
-    "sqlite3": "^5.1.2"
+    "date-fns": "^2.29.3"
   },
   "devDependencies": {
     "@types/mocha": "^10.0.0",
