--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -1,8 +1,17 @@
 {
   "name": "db-service",
-  "version": "0.0.1",
+  "version": "0.0.2",
+  "main": "dist/index.js",
+  "typings": "dist/index.d.ts",
+  "scripts": {
+    "build": "tsc && tsc-alias"
+  },
   "dependencies": {
     "sqlite": "^5.1.1",
     "sqlite3": "^5.1.6"
+  },
+  "devDependencies": {
+    "tsc-alias": "^1.7.0",
+    "typescript": "^4.8.4"
   }
 }
