--- a/apps/cli/package.json
+++ b/apps/cli/package.json
@@ -21,10 +21,11 @@
     "@oclif/plugin-help": "^5",
     "@oclif/plugin-plugins": "^2.1.1",
     "chalk": "4.1.2",
+    "core": "1.0.85",
     "date-fns": "^2.29.3",
+    "db-service": "0.0.2",
     "dotenv": "^16.0.3",
     "fuzzy": "^0.1.3",
-    "core": "workspace:*",
     "inquirer": "^8.0.0",
     "inquirer-autocomplete-prompt": "^2.0.0"
   },
