--- a/apps/cli/package.json
+++ b/apps/cli/package.json
@@ -23,7 +23,7 @@
     "chalk": "4.1.2",
     "core": "1.0.85",
     "date-fns": "^2.29.3",
-    "db-service": "0.0.2",
+    "db-services": "0.0.2",
     "dotenv": "^16.0.3",
     "fuzzy": "^0.1.3",
     "inquirer": "^8.0.0",
