--- a/packages/core/tsconfig.json
+++ b/packages/core/tsconfig.json
@@ -34,7 +34,8 @@
       "@repos": ["repositories"],
       "@core": ["core"],
       "@factories": ["factories"],
-      "@services": ["services"]
+      "@services": ["services"],
+      "@flows": ["flows"]
     },                              /* Specify a set of entries that re-map imports to additional lookup locations. */
     // "rootDirs": [],                                   /* Allow multiple folders to be treated as one when resolving modules. */
     // "typeRoots": [],                                  /* Specify multiple folders that act like './node_modules/@types'. */
