--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -1,11 +1,12 @@
 {
-  "name": "api",
+  "name": "@gamekeeper/api",
+  "private": true,
   "version": "0.0.1",
   "main": "dist/app.js",
   "typings": "dist/app.d.ts",
   "dependencies": {
-    "core": "1.0.85",
-    "db-services": "0.0.2",
+    "@gamekeeper/core": "1.0.85",
+    "@gamekeeper/db-services": "0.0.2",
     "dotenv": "^16.3.1",
     "express": "^4.18.2"
   },
