--- a/apps/cli/package.json
+++ b/apps/cli/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "cli",
+  "name": "@gamekeeper/cli",
+  "private": true,
   "version": "0.0.0",
   "description": "keep score of your games",
   "author": "jtamminga @jtamminga",
@@ -21,9 +22,9 @@
     "@oclif/plugin-help": "^5",
     "@oclif/plugin-plugins": "^2.1.1",
     "chalk": "4.1.2",
-    "core": "1.0.85",
+    "@gamekeeper/core": "1.0.85",
     "date-fns": "^2.29.3",
-    "db-services": "0.0.2",
+    "@gamekeeper/db-services": "0.0.2",
     "dotenv": "^16.0.3",
     "fuzzy": "^0.1.3",
     "inquirer": "^8.0.0",
