--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "db-services",
+  "name": "@gamekeeper/db-services",
+  "private": true,
   "version": "0.0.2",
   "main": "dist/index.js",
   "typings": "dist/index.d.ts",
@@ -9,7 +10,7 @@
   "dependencies": {
     "sqlite": "^5.1.1",
     "sqlite3": "^5.1.6",
-    "core": "1.0.85"
+    "@gamekeeper/core": "1.0.85"
   },
   "devDependencies": {
     "tsc-alias": "^1.7.0",
