started web app

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -1,8 +1,10 @@
 {
-  "name": "web",
+  "name": "@gamekeeper/web",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@gamekeeper/api-services": "0.0.1",
+    "@gamekeeper/core": "1.0.85",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -17,7 +19,7 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "cross-env PORT=3001 react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -39,5 +41,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "cross-env": "^7.0.3"
   }
 }
