--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -5,12 +5,15 @@
   "main": "dist/app.js",
   "typings": "dist/app.d.ts",
   "dependencies": {
+    "@gamekeeper/api-services": "0.0.1",
     "@gamekeeper/core": "1.0.85",
     "@gamekeeper/db-services": "0.0.2",
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "typescript": "^5.2.2"
   },
