--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -10,10 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
     "@gamekeeper/api-services": "0.0.1",
-    "@gamekeeper/core": "1.0.85"
+    "@gamekeeper/core": "1.0.85",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
