--- a/package.json
+++ b/package.json
@@ -6,5 +6,9 @@
   "workspaces": [
     "packages/*",
     "apps/*"
-  ]
+  ],
+  "packageManager": "yarn@4.0.2",
+  "scripts": {
+    "build:packages": "yarn workspaces foreach -Rpt --from 'packages/*' run build"
+  }
 }
