--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -9,9 +9,10 @@
     "build": "tsc && tsc-alias"
   },
   "dependencies": {
-    "@gamekeeper/core": "1.0.85"
+    "@gamekeeper/core": "workspace:1.0.85"
   },
   "devDependencies": {
+    "tsc-alias": "^1.8.8",
     "typescript": "^4.8.4"
   }
 }
