--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -9,9 +9,9 @@
     "build": "tsc && tsc-alias"
   },
   "dependencies": {
+    "@gamekeeper/core": "1.0.85",
     "sqlite": "^5.1.1",
-    "sqlite3": "^5.1.6",
-    "@gamekeeper/core": "1.0.85"
+    "sqlite3": "^5.1.6"
   },
   "devDependencies": {
     "tsc-alias": "^1.7.0",
