--- a/packages/api/tsconfig.json
+++ b/packages/api/tsconfig.json
@@ -28,7 +28,7 @@
     "module": "ESNext",                                  /* Specify what module code is generated. */
     "rootDir": "./src",                                  /* Specify the root folder within your source files. */
     "moduleResolution": "node",                          /* Specify how TypeScript looks up a file from a given module specifier. */
-    "baseUrl": "./src",                                  /* Specify the base directory to resolve non-relative module names. */
+    // "baseUrl": "./src",                               /* Specify the base directory to resolve non-relative module names. */
     // "paths": {
     //   "@domains": ["domains"],
     //   "@repos": ["repositories"],
