domain cleanup, started views

--- a/packages/core/tsconfig.json
+++ b/packages/core/tsconfig.json
@@ -35,7 +35,8 @@
       "@core": ["core"],
       "@factories": ["factories"],
       "@services": ["services"],
-      "@flows": ["flows"]
+      "@flows": ["flows"],
+      "@views": ["views"]
     },                              /* Specify a set of entries that re-map imports to additional lookup locations. */
     // "rootDirs": [],                                   /* Allow multiple folders to be treated as one when resolving modules. */
     // "typeRoots": [],                                  /* Specify multiple folders that act like './node_modules/@types'. */
