--- a/Dockerfile.api
+++ b/Dockerfile.api
@@ -6,16 +6,19 @@ ENV DB_PATH=test
 
 WORKDIR /usr/src/app
 
+RUN yarn set version berry
+
 # copy needed items only
 COPY package.json .
-COPY yarn.lock .
+COPY yarn.lock .yarnrc.yml ./
+COPY .yarn ./.yarn
 COPY packages/core ./packages/core
 COPY packages/db ./packages/db
 COPY apps/api ./apps/api
 
-RUN yarn workspace api install --frozen-lockfile
-RUN yarn workspace api build
+RUN yarn workspace @gamekeeper/api install
+RUN yarn workspaces foreach -Rpt --from 'apps/api' run build
 
 EXPOSE 3000
 
-CMD ["yarn", "workspace", "api", "start"]
+CMD ["yarn", "workspace", "@gamekeeper/api", "start"]
