--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,5 +15,5 @@ jobs:
         uses: actions/checkout@v4
 
       - name: build docker image
-        run: docker build -t local/gamekeeper-web Dockerfile.web
+        run: sudo docker build -t local/gamekeeper-web Dockerfile.web
 
