--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,6 +14,10 @@ jobs:
       - name: checkout code
         uses: actions/checkout@v4
 
-      - name: build docker image
-        run: sudo docker build -t local/gamekeeper-web Dockerfile.web
+      - name: build web docker image
+        run:  sudo docker build ./ -t local/gamekeeper-web -f Dockerfile.web
+
+      - name: build api docker image
+        run:  sudo docker build ./ -t local/gamekeeper-api -f Dockerfile.api
+
 
