--- a/Dockerfile.api
+++ b/Dockerfile.api
@@ -16,7 +16,8 @@ COPY packages/core ./packages/core
 COPY packages/db ./packages/db
 COPY apps/api ./apps/api
 
-RUN yarn workspace @gamekeeper/api install
+RUN yarn install
+# RUN yarn workspace @gamekeeper/api install
 RUN yarn workspaces foreach -Rpt --from 'apps/api' run build
 
 EXPOSE 3000
