--- a/Dockerfile.api
+++ b/Dockerfile.api
@@ -16,9 +16,12 @@ COPY packages/core ./packages/core
 COPY packages/db ./packages/db
 COPY apps/api ./apps/api
 
-RUN yarn install
-RUN yarn workspace @gamekeeper/api install
-RUN yarn workspace @gamekeeper/core install
+# RUN yarn install
+# RUN yarn workspace @gamekeeper/api install
+# RUN yarn workspace @gamekeeper/core install
+# RUN yarn workspaces foreach -Rpt --from 'apps/api' run build
+
+RUN yarn workspaces foreach -Rpt --from 'apps/api' install
 RUN yarn workspaces foreach -Rpt --from 'apps/api' run build
 
 EXPOSE 3000
