--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "build:web": "yarn workspaces foreach -Rpt --from 'apps/web' run build",
     "dev:web": "yarn workspace @gamekeeper/web dev",
     "dev:api": "yarn workspace @gamekeeper/api start",
-    "dev:all": "npm-run-all --parallel dev:web dev:api"
+    "dev:all": "npm-run-all --parallel dev:web dev:api",
+    "test": "yarn workspace @gamekeeper/testing test"
   },
   "devDependencies": {
     "npm-run-all": "^4.1.5"
