--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "@gamekeeper/core": "1.0.85",
     "@gamekeeper/db-services": "0.0.2",
+    "@gamekeeper/views": "0.0.1",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
