--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -12,13 +12,14 @@
   "dependencies": {
     "@gamekeeper/api-services": "0.0.1",
     "@gamekeeper/core": "1.0.85",
+    "@gamekeeper/views": "0.0.1",
     "date-fns": "^3.2.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react": "19.0.0",
+    "react-dom": "19.0.0"
   },
   "devDependencies": {
-    "@types/react": "^18.2.43",
-    "@types/react-dom": "^18.2.17",
+    "@types/react": "19.0.0",
+    "@types/react-dom": "19.0.0",
     "@typescript-eslint/eslint-plugin": "^6.14.0",
     "@typescript-eslint/parser": "^6.14.0",
     "@vitejs/plugin-react": "^4.2.1",
