--- a/packages/core/tsconfig.json
+++ b/packages/core/tsconfig.json
@@ -35,8 +35,7 @@
       "@domains/insights": ["domains/insights"],
       "@repos": ["repositories"],
       "@core": ["core"],
-      "@services": ["services"],
-      "@views": ["views"]
+      "@services": ["services"]
     },                              /* Specify a set of entries that re-map imports to additional lookup locations. */
     // "rootDirs": [],                                   /* Allow multiple folders to be treated as one when resolving modules. */
     // "typeRoots": [],                                  /* Specify multiple folders that act like './node_modules/@types'. */
