--- a/Dockerfile.web
+++ b/Dockerfile.web
@@ -12,13 +12,15 @@ COPY package.json .
 COPY yarn.lock .yarnrc.yml ./
 COPY .yarn ./.yarn
 COPY packages/core ./packages/core
+COPY packages/views ./packages/views
 COPY packages/api ./packages/api
 COPY apps/web ./apps/web
 
 # run install and build
-RUN yarn workspace @gamekeeper/web install
+# RUN yarn workspace @gamekeeper/web install
 # for some reason i need to run install on core otherwise i get missing node_modules error
-RUN yarn workspace @gamekeeper/core install
+# RUN yarn workspace @gamekeeper/core install
+RUN yarn workspaces foreach -Rpt --from 'apps/web' run install
 RUN yarn workspaces foreach -Rpt --from 'apps/web' run build
 
 EXPOSE 3000
