--- a/Dockerfile.web
+++ b/Dockerfile.web
@@ -17,12 +17,12 @@ COPY packages/api ./packages/api
 COPY apps/web ./apps/web
 
 # run install and build
-RUN yarn workspace @gamekeeper/web install
+# RUN yarn workspace @gamekeeper/web install
 # for some reason i need to run install on core otherwise i get missing node_modules error
-RUN yarn workspace @gamekeeper/core install
+# RUN yarn workspace @gamekeeper/core install
 
-RUN yarn workspaces foreach -Rpt --from 'apps/web' install
-RUN yarn workspaces foreach -Rpt --from 'apps/web' run build
+RUN yarn install:web
+RUN yarn build:web
 
 EXPOSE 3000
 
