--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   ],
   "packageManager": "yarn@4.0.2",
   "scripts": {
+    "install:api": "yarn workspaces foreach -Rpt --from 'apps/api' run install",
+    "install:web": "yarn workspaces foreach -Rpt --from 'apps/web' run install",
     "build:core": "yarn workspace @gamekeeper/core build",
     "build:packages": "yarn workspaces foreach -Rpt --from 'packages/*' run build",
     "build:all": "yarn workspaces foreach -Rpt --from 'apps/*' run build",
