--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -13,6 +13,7 @@
     "@gamekeeper/api-services": "0.0.1",
     "@gamekeeper/core": "1.0.85",
     "@gamekeeper/views": "0.0.1",
+    "chart.js": "^4.4.2",
     "date-fns": "^3.2.0",
     "react": "19.0.0",
     "react-dom": "19.0.0"
