--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -13,7 +13,8 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
-    "express-oauth2-jwt-bearer": "^1.6.0"
+    "express-oauth2-jwt-bearer": "^1.6.0",
+    "https": "^1.0.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
